PoC fix for invisible hover area
thanks PerplexityAI for getting me unstuck

--- a/gatsby/src/styles/buttons.module.css
+++ b/gatsby/src/styles/buttons.module.css
@@ -17,12 +17,16 @@
         padding: 0;
     }
 
-    .navButton .subNavConnector {
-        opacity: 0;
+    .navButton .dropDownConnector {
     }
 
-    .subNavConnector {
-        transition: opacity 0.10s ease-out;
+    .dropDownConnector {
+        transition: top 0.13s ease-in;
+        position: absolute;
+        max-width: 100%;
+        width: 100%;
+        height: 1rem;
+        border: 1px solid blue;
     }
 
     .dropDown {
@@ -30,26 +34,31 @@
     }
 
     .dropDownContent {
-        display: none;
+        display: flex;
         flex-direction: column;
-        position: absolute;
-        left: -4rem;
-        top: 0;
-        transition: top 0.13s ease-in;
+        position: relative;
+        width: fit-content;
+        white-space: nowrap;
+        visibility: collapse;
         row-gap: $subnav-padding;
+        top: -1rem;
         background-color: $grey-color;
         padding: $subnav-padding;
         border: 2px solid $grey-color;
         border-radius: $subnav-border-radius;
+        border: 1px solid red;
+        opacity: 0;
+        transition: opacity 0.10s ease-out;
+        transition: visibility 0s;
+    }
+
+    .dropDown:hover .dropDownConnector {
     }
 
     .dropDown:hover .dropDownContent {
-        top: $subnav-separation-top;
-        display: flex;
+        top: 0;
         opacity: 1;
-    }
-
-    .subNavItem {
+        visibility: visible;
     }
 
     .careersNavButton {
